# Quality-Assurance-QA

./: README.md  interactive_console_output.xml  pyproject.toml
api/: README.md  models.py
api/app/: __init__.py
api/resources/: departments.py  home.py  products.py
api/tests/: departments.robot  init.robot  test_departments_endpoints.py  test_products_endpoints.py
app/: README.md  app.py
app/functions/: __init__.py  view.py
app/models/: department.py  product.py
app/pages/: departments.py  home.py  products.py
app/services/: departmentServices.py  productServices.py
tests/: 2_departments.robot  3_products.robot
